Add SEO files: sitemap.xml, robots.txt and meta tags

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,14 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <link rel="apple-touch-icon" href="/logo.png" />
-    <title>Dr Tenreira</title>
+    <title>Dr Tenreira - Médecine générale et endobiogénie | Bruxelles & Ophain</title>
+    <meta name="description" content="Dr. Suzanne Tenreira Martins, médecin généraliste spécialisée en endobiogénie, phytothérapie et nutrition. Consultations à Bruxelles et Ophain. Approche médicale globale et personnalisée." />
+    <meta name="keywords" content="médecin généraliste, endobiogénie, phytothérapie, nutrition, mésothérapie, auriculothérapie, Bruxelles, Ophain, médecine naturelle" />
+    <meta name="author" content="Dr. Suzanne Tenreira Martins" />
+    <meta property="og:title" content="Dr Tenreira - Médecine générale et endobiogénie" />
+    <meta property="og:description" content="Médecin généraliste spécialisée en endobiogénie, phytothérapie et nutrition. Approche médicale globale et personnalisée." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://drtenreira.be" />
     <!-- Add Google Fonts here, example:
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
