--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,8 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
     <title>Dr Tenreira - Médecine générale et endobiogénie | Bruxelles & Ophain</title>
     <meta name="description" content="Dr. Suzanne Tenreira Martins, médecin généraliste spécialisée en endobiogénie, phytothérapie et nutrition. Consultations à Bruxelles et Ophain. Approche médicale globale et personnalisée." />
     <meta name="keywords" content="médecin généraliste, endobiogénie, phytothérapie, nutrition, mésothérapie, auriculothérapie, Bruxelles, Ophain, médecine naturelle" />
@@ -21,6 +21,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     -->
+    <!-- Schema.org markup pour les médecins -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Physician",
+      "name": "Dr. Suzanne Tenreira Martins",
+      "image": "https://drtenreira.be/dr-tenreira.webp",
+      "description": "Médecin généraliste spécialisée en endobiogénie, phytothérapie et nutrition. Approche médicale globale et personnalisée.",
+      "knowsLanguage": ["Français", "Anglais", "Portugais"],
+      "medicalSpecialty": ["General Practice", "Phytotherapy", "Endobiogénie", "Nutrition"],
+      "address": [
+        {
+          "@type": "PostalAddress",
+          "streetAddress": "Boulevard des Invalides 72",
+          "addressLocality": "Bruxelles",
+          "postalCode": "1160",
+          "addressCountry": "BE"
+        },
+        {
+          "@type": "PostalAddress",
+          "streetAddress": "Rue du Hautmont 29",
+          "addressLocality": "Ophain (Braine L'Alleud)",
+          "postalCode": "1421",
+          "addressCountry": "BE"
+        }
+      ],
+      "telephone": "+32 (0)2 888 52 48",
+      "email": "contact@drtenreira.be",
+      "url": "https://drtenreira.be"
+    }
+    </script>
   </head>
 
   <body>
